# bitcoin-rust

./: README.md  rustfmt.toml
lib/: Cargo.toml  block.cbor  tx.cbor
lib/src/: crypto.rs  error.rs  lib.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml
miner/src/: main.rs
node/src/: main.rs  util.rs
